# cpp_hw_14_yamr

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  map_reduce.h
src/: main.cpp  map_reduce.h
